--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,7 +82,7 @@ jobs:
                   install-deps: "true"
 
             - name: Configure CMake
-              run: cmake -DCMAKE_BUILD_TYPE=Debug -B '${{ github.workspace }}'/build
+              run: cmake -DCMAKE_BUILD_TYPE=Debug -DPORTABLE_PACKAGE -B '${{ github.workspace }}'/build
               env:
                   CMAKE_PREFIX_PATH: ${{ env.Qt5_Dir }}
 
